--- a/Sources/GraphQL Project/GraphQL Project.csproj
+++ b/Sources/GraphQL Project/GraphQL Project.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentAssertions" Version="6.9.0" />
       <PackageReference Include="HotChocolate.AspNetCore" Version="12.16.0" />
     </ItemGroup>
 
