--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,8 @@ PublishScripts/
 *.nuget.props
 *.nuget.targets
 
+
+
 # Microsoft Azure Build Output
 csx/
 *.build.csdef
@@ -405,7 +407,8 @@ FodyWeavers.xsd
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -428,3 +431,4 @@ Temporary Items
 
 /Sources/BowlingApp/bowling.db-shm
 /Sources/BowlingApp/bowling.db-wal
+/Sources/BowlingApp/bowling.db
