--- a/Sources/GraphQL Project/Properties/launchSettings.json
+++ b/Sources/GraphQL Project/Properties/launchSettings.json
@@ -16,6 +16,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "GraphQL": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:5002",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
