--- a/.drone.yml
+++ b/.drone.yml
@@ -27,7 +27,7 @@ steps:
     depends_on: [build]
 
   - name: code-analysis
-    image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dronesonarplugin-dotnet7
+    image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dronesonarplugin-dotnet6
     commands:
       - cd Sources/
       - dotnet restore Solution.sln
@@ -53,8 +53,8 @@ steps:
       - name: docs
         path: /docs
     commands:
-      #- cd Documentation/doxygen
-      #- doxygen Doxyfile
+      - cd Documentation/doxygen
+      - doxygen Doxyfile
       - /entrypoint.sh
     when:
       branch:
