--- a/Sources/BowlingApi/BowlingApi.csproj
+++ b/Sources/BowlingApi/BowlingApi.csproj
@@ -9,6 +9,11 @@
 
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'RestFull' " />
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+      <WarningLevel>4</WarningLevel>
+      <DocumentationFile>bin\Debug\net6.0\BowlingApi.xml</DocumentationFile>
+    </PropertyGroup>
     <ItemGroup>
         <!--<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />-->
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
