--- a/Sources/Bowling Api Gateway/Properties/launchSettings.json
+++ b/Sources/Bowling Api Gateway/Properties/launchSettings.json
@@ -1,17 +1,18 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52479",
-      "sslPort": 44312
+      "applicationUrl": "http://localhost:47947",
+      "sslPort": 44397
     }
   },
   "profiles": {
-    "API_Gateway": {
+    "Bowling_Api_Gateway": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7003;http://localhost:5129",
+      "applicationUrl": "https://localhost:7003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
