--- a/Sources/Bowling Api Gateway/Properties/launchSettings.json
+++ b/Sources/Bowling Api Gateway/Properties/launchSettings.json
@@ -1,9 +1,26 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:47947",
+      "sslPort": 44397
+    }
+  },
   "profiles": {
     "Bowling Api Gateway": {
       "commandName": "Project",
-      "applicationUrl": "http://localhost:7003",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7003",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
