les tests parti modifier

--- a/Sources/GraphQL Project/GraphQL Project.csproj
+++ b/Sources/GraphQL Project/GraphQL Project.csproj
@@ -7,6 +7,7 @@
         <RootNamespace>GraphQL_Project</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'GraphQL' " />
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="6.9.0" />
       <PackageReference Include="HotChocolate.AspNetCore" Version="12.16.0" />
