--- a/.drone.yml
+++ b/.drone.yml
@@ -46,3 +46,21 @@ steps:
         from_secret: SECRET_SONAR_LOGIN
     depends_on: [tests]
 
+  - name: generate-and-deploy-docs
+    image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-docdeployer
+    failure: ignore
+    volumes:
+      - name: docs
+        path: /docs
+    commands:
+      - cd Documentation/doxygen
+      - doxygen Doxyfile
+      - /entrypoint.sh
+    when:
+      branch:
+        - master
+    depends_on: [ build ]
+
+volumes:
+- name: docs
+  temp: {}
