--- a/.drone.yml
+++ b/.drone.yml
@@ -53,8 +53,8 @@ steps:
         - name: docs
           path: /docs
       commands:
-        #- cd Documentation/doxygen
-        #- doxygen Doxyfile
+        - cd Documentation/doxygen
+        - doxygen Doxyfile
         - /entrypoint.sh
       when:
         branch:
@@ -75,6 +75,7 @@ steps:
       when:
         branch:
           - master
+        depends_on: [ tests ]
 
 volumes:
 - name: docs
