--- a/.drone.yml
+++ b/.drone.yml
@@ -60,7 +60,7 @@ steps:
     image: plugins/docker
     settings:
       dockerfile: Sources/Bowling Api Gateway/Dockerfile
-      context: Sources/BowlingApi/
+      context: Sources/BowlingApi
       registry: hub.codefirst.iut.uca.fr
       repo: hub.codefirst.iut.uca.fr/victor_perez.ngounou/BowlingGameAPI
       username:
