--- a/.drone.yml
+++ b/.drone.yml
@@ -67,16 +67,16 @@ steps:
         from_secret: SECRET_REGISTRY_USERNAME
       password:
         from_secret: SECRET_REGISTRY_PASSWORD
-     # depends_on: [ build ]
+      depends_on: [ build ]
         
-  # container deployment
-  #- name: deploy-container
-   # image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dockerproxy-clientdrone:latest
-    #environment:
-     # IMAGENAME: hub.codefirst.iut.uca.fr/victor_perez.ngounou/BowlingGameAPI:latest
-      #CONTAINERNAME: my_container_name
-      #COMMAND: create
-      #OVERWRITE: true
+   #container deployment
+  - name: deploy-container
+    image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dockerproxy-clientdrone:latest
+    environment:
+      IMAGENAME: hub.codefirst.iut.uca.fr/victor_perez.ngounou/bowling-api-rest:latest
+      CONTAINERNAME: bowling-api-rest:latest
+      COMMAND: create
+      OVERWRITE: true
 
 volumes:
 - name: docs
