--- a/.drone.yml
+++ b/.drone.yml
@@ -54,6 +54,9 @@ steps:
       password:
         from_secret: SECRET_REGISTRY_PASSWORD
       depends_on: [ build ]
+      when:
+        branch:
+          - master
 
 
   - name: docker-build-and-push-api-gateway
@@ -68,9 +71,12 @@ steps:
       password:
         from_secret: SECRET_REGISTRY_PASSWORD
       depends_on: [ build ]
+      when:
+        branch:
+          - master
         
    #container deployment
-  - name: deploy-container
+  - name: deploy-container-restfull
     image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dockerproxy-clientdrone:latest
     environment:
       IMAGENAME: hub.codefirst.iut.uca.fr/victor_perez.ngounou/bowling-api-rest:latest
@@ -79,6 +85,22 @@ steps:
       OVERWRITE: true
     depends_on:
       - docker-build-and-push-api-rest
+    when:
+        branch:
+            - master
+    
+  - name: deploy-container-gateway
+    image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dockerproxy-clientdrone:latest
+    environment:
+      IMAGENAME: hub.codefirst.iut.uca.fr/victor_perez.ngounou/bowling-api-gateway:latest
+      CONTAINERNAME: bowling-api-gateway
+      COMMAND: create
+      OVERWRITE: true
+    depends_on:
+      - docker-build-and-push-api-gateway
+    when: 
+      branch:
+        - master
 
 volumes:
 - name: docs
